# gravitas

./: .gitignore  MANIFEST.in  Makefile  README.rst  bump_version.py  config.toml  opt_mascons.py  pyproject.toml  pyproject2_ignore_pls.txt  pyvenv.cfg  requirements.txt  setup.py  test_ext.py  weird_degree_error.py
.github/workflows/: build_sdist.yml  build_wheels.yml  wheels.yml
docs/source/: conf.py  gravitas.rst  index.rst  modules.rst
docs/source/_generate/: gravitas.earth_acceleration.rst  gravitas.moon_acceleration.rst
gravitas/: EGM96.c  GRGM360.c  MRO120F.c  __init__.py  gravitas.pyi  gravlib.c  lib.py  python_bindings.cpp  setup.py  test.py
gravitas/models/: MRO120F
gravitas_pp/: EGM96.hpp  GRGM360.hpp  MRO120F.hpp  libgrav.hpp  python_bindings.cpp  setup.py  test.py
src/: gravitas.pyi  libgrav.hpp  python_bindings.cpp
tests/: test.py
