[project]
name = "gravitas"
version = "0.2.10"
description = "Gravity field modeling for astrodynamics"
requires-python = ">=3.10"

[[project.authors]]
name = "Liam Robinson"
email = "liamers127@gmail.com"

[build-system]
requires = [ "setuptools>=42", "wheel", "numpy>=1.19.2", "pybind11>=2.11.0", "eigency>=1.6.0", "setuptools-scm>=8.0",]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/liamrobinson1/gravitas"
Documentation = "https://yourprojectdocs.com"